refactor(health-checkup): restructure health checkup logic, remove result handling, and update related components
- Deleted unused HealthCheckResultController, DTO, Repository, and Service
- Refactored HealthCheckCampaign and HealthCheckForm controllers and services
- Added CreateHealthCheckCampaignRequest DTO and HealthCheckCampaignScheduledTasks
- Updated model, DTOs, and enums to align with new health checkup logic
- Updated WebSocket notification flow and notification model
- Adjusted frontend components and API calls related to campaign and form handling
- Removed outdated documentation file